initial fix of flickering bar - spaced out nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,7 @@ h1, h2, h3, h4 {
   display: block;
   position: relative;
   color: var(--primary-dark);
-  padding: 10px 15px;
+  padding: 10px 28px;
   transition: 0.3s;
   font-size: 14px;
   font-family: var(--font-body);
@@ -285,8 +285,8 @@ h1, h2, h3, h4 {
 }
 
 .main-nav .drop-down ul a {
-  padding: 10px 20px;
-  font-size: 14px;
+  padding: 10px 15px;
+  font-size:14px;
   font-weight: 500;
   text-transform: none;
   color: #065e77;
